kubernetes/overlays/homelab/prod/selfhosted/jellyfin/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jellyfin-tailscale
  namespace: selfhosted

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: jellyfin
      port:
        number: 8096
  tls:
    - hosts:
        - jellyfin
